--- a/VueJS/FirstProject/package.json
+++ b/VueJS/FirstProject/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "express": "^4.21.1",
     "vue": "^3.5.12"
   },
   "devDependencies": {
